@@ -21,6 +21,7 @@ usr/lib/kfocus/conf/etc_bash_completion.d_kfocus
 usr/lib/kfocus/conf/etc_xdg_autostart_kfocus-focusrx-dbus-dispatch.desktop
 usr/lib/kfocus/conf/etc_xdg_autostart_kfocus-focusrx.desktop
 usr/lib/kfocus/conf/etc_xdg_menus_applications-merged_kfocus.menu
+usr/lib/kfocus/plasma/*
 usr/lib/systemd/system/*
 usr/share/applications/kfocus-extra.desktop
 usr/share/applications/kfocus-firstrun.desktop
