@@ -1,6 +1,8 @@
 kfocus-main (24.04.1~beta21) UNRELEASED; urgency=medium
 
   * Wipe LD_LIBRARY_PATH before running _mainFn in kfocus-mime. (#4288)
+  * Store Plasma scripts in a central repository and call them using
+    common.2.source.
 
  -- Aaron Rainbolt <arainbolt@kfocus.org>  Thu, 23 May 2024 18:24:44 -0500
 
